Fix vertical spacing for sidebar

--- a/assets/scss/layouts/_sidebar.scss
+++ b/assets/scss/layouts/_sidebar.scss
@@ -149,7 +149,6 @@ nav.docs-links {
 a.docs-link {
   color: $body-color;
   display: block;
-  padding: 0.125rem 0;
   padding-left: 1.5rem;
   font-size: $font-size-base;
 }
